# goal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
src/: agents-md-fragment.md  claude-md-fragment.md  goal_cli.sh  goal_lib.sh
src/goal_mcp/: __init__.py  server.py
src/hooks/: post_tool_batch_hook.sh  stop_hook.sh  user_prompt_submit_hook.sh
src/mcp-server/: goal_server.py  run.sh
src/skill/: SKILL.md
src/templates/: budget_limit.md  continuation.md  objective_updated.md
