[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goal-mcp"
version = "0.1.0"
description = "Persistent, multi-turn goal tracking MCP server — ported from Codex CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
goal-mcp = "goal_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goal_mcp"]
